--- a/index.html
+++ b/index.html
@@ -8,33 +8,47 @@
     <title>Calculator</title>
   </head>
   <body>
+    <!-- <h1>Calculator!</h1> -->
     <div id="calc-body">
-      <div id="screen"></div>
+      <div id="screen"><div contenteditable id="screen-text"></div></div>
       <div id="buttons-container">
         <table class="buttons">
           <tr>
-            <td><button id="btn-7">7</button></td>
-            <td><button id="btn-8">8</button></td>
-            <td><button id="btn-9">9</button></td>
-          </tr>
-          <tr>
-            <td><button id="btn-4">4</button></td>
-            <td><button id="btn-5">5</button></td>
-            <td><button id="btn-6">6</button></td>
-          </tr>
-          <tr>
-            <td><button id="btn-1">1</button></td>
-            <td><button id="btn-2">2</button></td>
-            <td><button id="btn-3">3</button></td>
+            <td><button id="btn-CE">EC</button></td>
+            <td><button id="btn-C">C</button></td>
+            <td><button class="operation" id="btn-*">*</button></td>
+            <td><button class="operation" id="btn-/">/</button></td>
           </tr>
 
           <tr>
-            <td><button id="btn-0">0</button></td>
+            <td><button class="digit" id="btn-7">7</button></td>
+            <td><button class="digit" id="btn-8">8</button></td>
+            <td><button class="digit" id="btn-9">9</button></td>
+            <td><button class="operation" id="btn-+">+</button></td>
+          </tr>
+          <tr>
+            <td><button class="digit" id="btn-4">4</button></td>
+            <td><button class="digit" id="btn-5">5</button></td>
+            <td><button class="digit" id="btn-6">6</button></td>
+            <td><button class="operation" id="btn--">-</button></td>
+          </tr>
+
+          <tr>
+            <td><button class="digit" id="btn-1">1</button></td>
+            <td><button class="digit" id="btn-2">2</button></td>
+            <td><button class="digit" id="btn-3">3</button></td>
+            <td><button id="btn-=">=</button></td>
+          </tr>
+
+          <tr>
+            <td><button class="btn-empty"></button></td>
+            <td><button class="digit" id="btn-0">0</button></td>
+            <td><button class="btn-empty"></button></td>
           </tr>
         </table>
       </div>
     </div>
 
-    <script src="calc.js"></script>
+    <script defer src="calc.js"></script>
   </body>
 </html>
