Addition and Subtraction added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <!-- <h1>Calculator!</h1> -->
     <div id="calc-body">
-      <div id="screen"><div contenteditable id="screen-text"></div></div>
+      <div id="screen"><div contenteditable id="screen-text">6 + 9</div></div>
       <div id="buttons-container">
         <table class="buttons">
           <tr>
