Rewrote the main update and parser functions, kept old ones in original calc.js

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
       </div>
     </div>
 
-    <script defer src="calc.js"></script>
+    <!-- <script defer src="calc.js"></script> -->
+    <script defer src="calc-new.js"></script>
   </body>
 </html>
